# qt-basic

./: .gitignore  CMakeLists.txt  README.md  toolchain.txt
src/: main.cpp  test.f
src/inc/: Blas.h  Lapack.h
src/src2/: common.h  test2.f
